# RUST

./: .gitignore
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
hello_world/: main.rs
sum/: Cargo.toml
sum/src/: main.rs
tauri-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json
tauri-app/public/: test_project.json
tauri-app/src/: App.vue  main.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/components/: GreetForm.vue  PortScanner.vue  TheProjectTree.vue
test_modbus_v1r1/: Cargo.toml  connect_settings.json  registers.json  tags.csv
test_modbus_v1r1/src/: add_register.rs  connect_settings.json  main.rs  scan_available_ports.rs  sort_registers.rs
var_type/src/: main.rs
