[package]
name = "test_modbus_v1r1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-modbus = { version = "0.7", features = ["rtu"] }
tokio-serial = "5.4"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
serialport = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase", "handleapi"] }